Rename 'matrix' to 'grid', added tests

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             // Create sudoku with medium level
             var sudoku = new Sudoku();
 
-            // Show matrix in console
+            // Show grid in console
             sudoku.show();
 
             // Set number in position 1-1
@@ -28,7 +28,7 @@
             sudoku.setNumber(1, 1, 5);
             sudoku.show();
 
-            // Check matrix
+            // Check grid
             if (sudoku.check()) {
                 console.log('Well done!');
             } else {
