--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>Sudoku Tests</title>
+        <title>Sudoku Test</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
