--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             sudoku.show();
 
             // Set number in position 1-1
-            // (Set 0 to clear cell)
+            // (To clear cell - set 0)
             sudoku.setNumber(1, 1, 5);
             sudoku.show();
 
